Bug 147181 - Writer text table: incomplete tracking of drag & drop multiple table rows
Summary: Writer text table: incomplete tracking of drag & drop multiple table rows
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.1
Keywords: regression
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2022-02-04 11:07 UTC by NISZ LibreOffice Team
Modified: 2022-05-26 08:21 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from Writer with a table (10.14 KB, application/vnd.oasis.opendocument.text)
2022-02-04 11:08 UTC, NISZ LibreOffice Team
Details
First screenshot (3.65 KB, image/jpeg)
2022-02-04 11:09 UTC, NISZ LibreOffice Team
Details
Second screenshot (3.62 KB, image/jpeg)
2022-02-04 11:09 UTC, NISZ LibreOffice Team
Details
moving first 2 rows before the last one: missing tracking (3.86 KB, image/png)
2022-02-08 08:07 UTC, László Németh
Details
moving first 2 rows before the last one: fixed version (3.82 KB, image/png)
2022-02-08 08:08 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-02-04 11:07:32 UTC
Description:
When multiple rows are selected and copied with change tracking, only 1 to 1 row is marked for table row deletion and insertion.

Steps to Reproduce:
    1. Open attached file
    2. Select 2 rows by clicking left border of the fist row, and drag the selection to the second one
    3. Copy them

Actual Results:
Only 1 to 1 row is marked for table row deletion and insertion.

Expected Results:
It should copy and set tracked row deletion/insertion for all of them


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 5c138ac6a8334825ef171ac6291b66b277eb4288
CPU threads: 8; OS: Windows 10.0 Build 18363; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL
Comment 1 NISZ LibreOffice Team 2022-02-04 11:08:56 UTC
Created attachment 178043 [details]
Example file from Writer with a table
Comment 2 NISZ LibreOffice Team 2022-02-04 11:09:14 UTC
Created attachment 178044 [details]
First screenshot
Comment 3 NISZ LibreOffice Team 2022-02-04 11:09:31 UTC
Created attachment 178045 [details]
Second screenshot
Comment 4 László Németh 2022-02-08 08:01:06 UTC
Comment on attachment 178044 [details]
First screenshot

not related to the bug
Comment 5 László Németh 2022-02-08 08:01:28 UTC
Comment on attachment 178045 [details]
Second screenshot

not related to the bug
Comment 6 László Németh 2022-02-08 08:07:56 UTC
Created attachment 178135 [details]
moving first 2 rows before the last one: missing tracking

 (also missing deletion in the first line)
Comment 7 László Németh 2022-02-08 08:08:20 UTC
Created attachment 178136 [details]
moving first 2 rows before the last one: fixed version
Comment 8 Commit Notification 2022-02-09 20:19:07 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2bb9ad2078e355b71ab25db0c46f3d0bb19cf6d4

tdf#147181 tdf#147322 sw: fix drag & drop multiple table rows

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 László Németh 2022-02-09 20:45:07 UTC
tdf#147181 tdf#147322 sw: fix drag & drop multiple table rows

With change tracking, moving multiple table rows tracked
only the first row as deleted, and in the insertion point,
as inserted.

Without change tracking, only the first row were deleted
from the original position. This is a regression of tdf#84806
from commit 5e8aa259e48d5602b932353bb146ebb523982cf2
"tdf#146967 sw table: fix freezing in Hide Changes mode".

Add unit tests for the change tracking fix and for the original
table moving fix in commit 7fe64353dc9950e19182a59a486a1ecac27cf98e
"tdf#84806 Writer: drag and drop selected tables, don't empty".
Comment 10 Commit Notification 2022-02-10 08:37:35 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/9493147ad6b046a4685896d594ed257800552f67

tdf#147181 tdf#147322 sw: fix drag & drop multiple table rows

It will be available in 7.3.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 NISZ LibreOffice Team 2022-03-08 07:28:03 UTC
Verified in
Version: 7.4.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 6adabd915d931b845fcf2fef15fbf3fca14ec9b3
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded