tdf#147181 tdf#84806 sw: fix drag & drop multiple table rows

Moving multiple table rows tracked only the first row as deleted,
and in the insertion point, as inserted.

Without change tracking, only the first row were deleted from
the original position.

Regression from commit 5e8aa259e48d5602b932353bb146ebb523982cf2
"tdf#146967 sw table: fix freezing in Hide Changes mode".

Add also unit test for the original table moving fix in
commit 7fe64353dc9950e19182a59a486a1ecac27cf98e
"tdf#84806 Writer: drag and drop selected tables, don't empty".

Change-Id: I43250fcef4bbf482e67a7414f4f655e75d226b55